  - Fix metadata annotation overflow in darshan-convert, reported by 
    Mouhamed Gueye.
  - Fix const-correctness in dynamic library when built against MPI 3.x
    libraries.
  - Fix "undefined symbol: dlsym" error when using preloaded dynamic library
    on some platforms, reported by Florin Isaila.
  - Normalize timestamps to always be relative to MPI_Init().
* Enhancements:
  - Add support (both in documementation and in provided module files) for
    Cray PE 2.x.
  - Honor CC variable to allow darshan-util to be built with other compilers
    besides gcc.
  - Update documentation to clarify the interaction between rpath and
    LD_PRELOAD when instrumenting dynamic libraries, issue reported and
    investigated by Davide Del Vento.
  - Ability to disable shared-file reduction by setting the
    DARSHAN_DISABLE_SHARED_REDUCTION environment variable.
  - More thorough output from darshan-parser --perf, suggested by Huong Luu.
  - Increased metadata annotation room from 64 bytes to 1KiB in header.
  - CP_F_{FASTEST/SLOWEST}_RANK_TIME counters now take MPI-IO time into
    account, not just POSIX time, issue reported by Huong Luu.
  - Better handling of systems with many mounted file systems (after which
    point Darshan will assume file resides on / file system), issue reported
    and investigated by David Shrader:
    - Track up to 64 rather than 32 mounted file systems at runtime.
    - Increase header space available for storing mount point information in
      log file from approximately 1 KiB to approximately 3 KiB.
    - Prioritize storing information about non-NFS volumes over NFS volumes
      if too many file systems are mounted to record them all.


darshan-2.2.8
=============
* WARNING: please note that the Darshan module file for Cray environments has
  been updated, especially in the DARSHAN_POST_LINK_OPTS variable.  Please
  update your module file accordingly when upgrading from 2.2.7 or earlier 
  on Cray platforms.