@@ -15,6 +15,8 @@ darshan-2.2.9-pre1
   - Fix "undefined symbol: dlsym" error when using preloaded dynamic library
     on some platforms, reported by Florin Isaila.
   - Normalize timestamps to always be relative to MPI_Init().
+  - Better library name matching in compiler wrappers to handle more MPICH
+    variations on Blue Gene systems.
 * Enhancements:
   - Add support (both in documementation and in provided module files) for
     Cray PE 2.x.
